# Smart_Home_App

./: README.md
Database/: Info_Fetcher.py  Info_Populator.py  Web_Server.py  add_historical.py  config.py  constants.py  weather_data.py
Home_IoT_App/: .gitignore  Makefile  craco.config.js  home.sql  package-lock.json  package.json  pyproject.toml  tsconfig.json
Home_IoT_App/public/: app.py  index.html  routes.py
Home_IoT_App/src/: App.js
Home_IoT_App/src/components/: Common.tsx
Home_IoT_App/src/components/layouts/: TabBar.tsx
Home_IoT_App/src/components/pages/: ScreenOne.tsx  ScreenThree.tsx  ScreenTwo.tsx
Home_IoT_App/src/css/: App.css  antd.css  index.css
Plans/: Wireframe.drawio  classDiagram.drawio
