[project]
name = ""
version = ""
description = ""
authors = [{ name = "mallory merkel", email = "mmerkel@uab.edu" }]
dependencies = [
    "psycopg2>=2.9.3",
    "meteostat>=1.6.1",
]
requires-python = ">=3.9"
license = { text = "" }

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
